# Audit_scripts

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  UBUNTU_USAGE.md  USAGE.md  analyze_zero_amounts.py  nl_query.py  pyproject.toml  requirements-all.txt  requirements.txt  run_data_conversion.bat  run_data_conversion.sh  start_app.py  start_data_conversion.py  start_nl_query.bat  start_nl_query.py  start_nl_query.sh  validate_transformation.py
archive/old_scripts/: start_nl_query.old.bat
configs/: .env.example
data/: 凭证明细-和立佛山-2023年.csv  凭证明细-和立佛山-2024年.csv  凭证明细-盛翔江门-2024年.csv  凭证明细-盛翔江门-2025年（1-9月）.csv
data_conversion/: auxiliary_parser.py  csv_to_db.py  data_cleaner.py  data_consistency_checker.py  db_schema.py
database_transformation/: accounting.db  config.py  create_tables.sql  requirements.txt  transform_journal.py  下一步计划.md  方案文档.md  方案文档_v2.md  项目状态报告.md
database_transformation/data/: 凭证明细-和昇-2024年.csv  凭证明细-和昇-2025年（1-9月）.csv  凭证明细-盛翔江门-2023年.csv
database_transformation/docs/: README.md  开发说明文档.md  数据查询指引.md
database_transformation/nl_query/: .env.example  README.md  database.py  demo.py  requirements.txt  sql_generator.py  start_app.bat  test_integration.py  utils.py
database_transformation/scripts/: csv_to_db.py  (+5 more)
docs/: database_transformation_README.md
natural_language_query/: README.md  config.yaml  requirements.txt
nl_query/: app.py  config.py  deepseek_client.py  run.py  test_app.py
tests/: test_auxiliary_parser.py  test_basic.py  test_company_extraction.py
银行付款去向追踪/: .gitignore  README.md  run_bank_payment.py
(+39 files in other folders)
